--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   </head>
   <body>
     <div class="webgl-content">
+	<div> under construction, currently only a development proof of concept build </div>
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
         <div class="title">GCVC Alpha</div>
-		<p> Best Played with a controller!</p>
+		<div><p> Best Played with a controller!</p></div>
       </div>
     </div>
   </body>
