--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>GCVC</title>
+    <title>Unity WebGL Player | fuck Unity</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -14,13 +14,11 @@
   </head>
   <body>
     <div class="webgl-content">
-	<div> under construction, currently only a development proof of concept build </div>
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">GCVC Alpha</div>
-		<div><p> Best Played with a controller!</p></div>
+        <div class="title">fuck Unity</div>
       </div>
     </div>
   </body>
