--- a/index - Copy.html
+++ b/index - Copy.html
@@ -22,6 +22,14 @@
 		
       </div>
 	  <div><p> Best Played with a controller!</p></div>
+	  <div><p> arrow keys or awsd for direction </p></div>
+	  <div><p>  q key for normal shot</p></div>
+	  <div><p>  r key for Vigilante shot</p></div>
+	  <div><p>  y key to change vigilante weapon</p></div>
+	  <div><p>  e key for super move </p></div>
+	  <div><p> space bar to jump </p></div>
+	  <div><p> ctrl key to swap the red and blue platforms </p></div>
+    
     </div>
   </body>
 </html>
