--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <div class="title">GCVC Alpha</div>
 		
       </div>
-	  <div><p> Best Played with a controller!</p></div>
-	  <div><p> arrow keys or awsd for direction </p></div>
-	  <div><p>  q key for normal shot</p></div>
-	  <div><p>  r key for Vigilante shot</p></div>
-	  <div><p>  y key to change vigilante weapon</p></div>
-	  <div><p>  e key for super move </p></div>
-	  <div><p> space bar to jump </p></div>
-	  <div><p> ctrl key to swap the red and blue platforms </p></div>
+	  <div><p> Best Played with a controller! </p></div>
+	  <div><p> (PS4 Left analog) arrow keys or awsd for direction </p></div>
+	  <div><p>  (PS4: Square)q key for normal shot</p></div>
+	  <div><p>  (PS4: Triangle)r key for Vigilante shot</p></div>
+	  <div><p>  (PS4: R1)y key to change vigilante weapon</p></div>
+	  <div><p>  (PS4: L1)e key for super move </p></div>
+	  <div><p> (PS4: X)space bar to jump </p></div>
+	  <div><p> (PS4: Circle)ctrl key to swap the red and blue platforms </p></div>
     
     </div>
   </body>
