--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       </div>
 	  <div><p> Best Played with a controller! </p></div>
 	  <div><p> (PS4 Left analog) arrow keys or awsd for direction </p></div>
-	  <div><p>  (PS4: Square)q key for normal shot</p></div>
+	  <div><p>  (PS4: cross)q key for normal shot</p></div>
 	  <div><p>  (PS4: Triangle)r key for Vigilante shot</p></div>
 	  <div><p>  (PS4: R1)y key to change vigilante weapon</p></div>
 	  <div><p>  (PS4: L1)e key for super move </p></div>
-	  <div><p> (PS4: X)space bar to jump </p></div>
-	  <div><p> (PS4: Circle)ctrl key to swap the red and blue platforms </p></div>
+	  <div><p> (PS4: cirlce)space bar to jump </p></div>
+	  <div><p> (PS4: square)ctrl key to swap the red and blue platforms </p></div>
     
     </div>
   </body>
